objects/VTS_Role_Code__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is the translation layer for the grant codes coming from VTS for SSO User provisioning</description>
    <fields>
        <fullName>Grant_Code__c</fullName>
        <description>grant code for the specified permission set.  it is a 2 digit number</description>
        <label>Grant Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupID__c</fullName>
        <description>Field to store the group ID for this permission group so that users are added to groups as they are provisioned</description>
        <label>GroupID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <label>Permission Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VTS Role Code</label>
</CustomObject>